JsonValue to support gc free parsing and adding benchmark